--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,12 @@ jobs:
         run: |
           npm run build
 
+      - name: Create SPA fallback 404
+        run: |
+          # Copy index.html to 404.html so GitHub Pages will serve the SPA entry
+          # for unknown routes and let the client-side router handle navigation.
+          cp -f dist/index.html dist/404.html
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
